Convert from 2020 EUR to 2025 EUR

--- a/process_generation_data.ipynb
+++ b/process_generation_data.ipynb
@@ -978,7 +978,7 @@
     "    :currency,\n",
     "    :metadata\n",
     "]\n",
-    "final_data = DataFrame()\n",
+    "desired_data = DataFrame()\n",
     "for (name, (techs, apply_cc)) in technology_mapping\n",
     "    # Filter relevant technologies.\n",
     "    df = filter(\n",
@@ -1008,8 +1008,50 @@
     "    end\n",
     "    # Final formatting\n",
     "    df.technology .= name\n",
-    "    append!(final_data, df[!, cols])\n",
+    "    append!(desired_data, df[!, cols])\n",
     "end\n",
+    "describe(desired_data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Convert monetary units from 2020 EUR to 2025 EUR\n",
+    "\n",
+    "For the purposes of Mopo, we need to convert the 2020 EUR into 2025 EUR.\n",
+    "This is done using the [harmonised index of consumer prices](https://ec.europa.eu/eurostat/cache/metadata/en/prc_hicp_esms.htm)\n",
+    "using the *annual averate rate of change `RCH_A_AVG`* for the full *Euro Area* for the years 2020-2024.\n",
+    "\n",
+    "[Link to the data source](https://doi.org/10.2908/PRC_HICP_AIND)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Convert 2020 EUR to 2025 EUR using HICP\n",
+    "\n",
+    "# Copy desired data to avoid messing with things on multiple executions.\n",
+    "final_data = deepcopy(desired_data)\n",
+    "\n",
+    "# Annual rate of change in consumer prices for the Euro area, see data source above.\n",
+    "hicp_rch_a_avg_2020_2024 = [0.3, 2.6, 8.4, 5.4, 2.4] ./ 100 \n",
+    "# Calculate total conversion factor by multiplicatively applying the changes.\n",
+    "eur_2020_to_2025_conversion_factor = prod(1 .+ hicp_rch_a_avg_2020_2024)\n",
+    "\n",
+    "# Apply monetary conversion to the desired fields\n",
+    "for field in [\n",
+    "    :CAPEX_MEUR_MW,\n",
+    "    :FOM_EUR_MW_y,\n",
+    "    :VOM_EUR_MWh\n",
+    "]\n",
+    "    final_data[!, field] .*= eur_2020_to_2025_conversion_factor\n",
+    "end\n",
+    "# Set correct monetary unit and show\n",
+    "final_data.currency .= \"2025 EUR\"\n",
     "describe(final_data)"
    ]
   },
