Estimate existing distributed heating capacities

--- a/demand_scaling.ipynb
+++ b/demand_scaling.ipynb
@@ -278,6 +278,220 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Check heating-to-DHW ratios\n",
+    "\n",
+    "heating_to_dhw = filter(row -> row.demand == \"heating\", hm_sums)\n",
+    "dhw = filter(row -> row.demand == \"DHW\", hm_sums)\n",
+    "heating_to_dhw.scenario_value_sum ./= dhw.scenario_value_sum\n",
+    "filter(row ->  row.country == \"FI\", heating_to_dhw)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Check res-to-nonres ratios\n",
+    "\n",
+    "res_to_nonres = filter(row -> row.category == \"res\", hm_sums)\n",
+    "nonres = filter(row -> row.category == \"nonres\", hm_sums)\n",
+    "res_to_nonres.scenario_value_sum ./= nonres.scenario_value_sum\n",
+    "filter(row ->  row.country == \"FI\", res_to_nonres)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Examine heat pump COPs\n",
+    "\n",
+    "The Hotmaps data has separate values for `Electricity` and `Ambient Heat` as the `Fuel` for heat pumps. Let's see how these assumptions vary between countries and end-uses."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Examine the heat pump COPs based on their electricity and ambient heat consumption\n",
+    "\n",
+    "df = hm_data[hm_data.Technology .== \"heat pumps\", :]\n",
+    "df = unstack(df, :Fuel, :scenario_value)\n",
+    "df = df[df.Electricity .> 0, :]\n",
+    "df.COP .= (df.Electricity + df[!, Symbol(\"ambient heat\")]) ./ df.Electricity\n",
+    "#sort!(df, :COP; rev=true)\n",
+    "describe(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Well that's a bit alarming: The mean COP in the Hotmaps data is above six, which seems pretty unrealistic. Furthermore, the maximum COP is infeasibly high, and weirdly seems to occur mostly for DHW.\n",
+    "\n",
+    "Therefore, there's a risk that the modelled heat pump capacity is not enough to cover the demand in certain countries if I use the `Electricity` fuel as the basis for the assumed existing capacity."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Let's check space heating and DHW separately:\n",
+    "\n",
+    "df_cop_demand = unstack(df, :demand, :COP)\n",
+    "describe(df_cop_demand)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Surprisingly, the space heating COPs are lower than DHW COPs, which shouldn't be the case. Not really sure what's going on here with the Hotmaps data. Ultimately, it might be necessary to estimate the existing heat pump capacity based on the total and the assumed technology parameter COP, but we'll see."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Estimate generation capacities\n",
+    "\n",
+    "We'll have to estimate the technology capacities based on the yearly demands and the estimated demand peak ratio."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Calculate estimated peak capacities.\n",
+    "\n",
+    "hm_capacity_data = leftjoin( # Combine estimated peak demand ratio data with yearly demands.\n",
+    "    hm_data,\n",
+    "    dem_normalised_peak_demands;\n",
+    "    on=[:country, :demand],\n",
+    ")\n",
+    "rename!(hm_capacity_data, :value_norm_maximum => :peak_to_yearly_demand_ratios_GW_GWh)\n",
+    "hm_capacity_data.capacity_MW = ( # Calculate the estimated capacity in MW\n",
+    "    hm_capacity_data.scenario_value\n",
+    "    .* hm_capacity_data.peak_to_yearly_demand_ratios_GW_GWh\n",
+    "    .* 1000\n",
+    ")\n",
+    "describe(hm_capacity_data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Technology mapping\n",
+    "\n",
+    "Map the estimated peak capacities to the desired technologies."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Figure out heating system mappings from Hotmaps to the desired techs.\n",
+    "\n",
+    "heat_techs = unique(hm_data.Technology)\n",
+    "gas_boiler = filter(x -> contains(lowercase(x), \"gas boiler\"), heat_techs)\n",
+    "bio_boiler = filter(x -> contains(lowercase(x), \"biomass\"), heat_techs)\n",
+    "oil_boiler = filter(x -> contains(lowercase(x), \"oil boiler\"), heat_techs)\n",
+    "air_heatpump = filter(x -> contains(lowercase(x), \"heat pump\"), heat_techs) # Data doesn't distinguish between different heat pumps.\n",
+    "ground_heatpump = filter(x -> contains(lowercase(x), \"heat pump\"), heat_techs) # Data doesn't distinguish between different heat pumps.\n",
+    "solar_heating = filter(x -> contains(lowercase(x), \"solar\"), heat_techs)\n",
+    "electric_heating = filter(x -> contains(lowercase(x), \"electric\"), heat_techs)\n",
+    "district_heating = filter(x -> contains(lowercase(x), \"district heating\"), heat_techs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Map hm_data technologies to the desired heating techs.\n",
+    "\n",
+    "distributed_tech_mapping = Dict( # (Set of technologies, assumed share)\n",
+    "    \"gas-boiler\" => (gas_boiler, 1.0),\n",
+    "    \"bio-boiler\" => (bio_boiler, 1.0),\n",
+    "    \"oil-boiler\" => (oil_boiler, 1.0),\n",
+    "    \"air-heatpump\" => (air_heatpump, 0.7), # Assumed 70% market share for A2WHPs\n",
+    "    \"ground-heatpump\" => (ground_heatpump, 0.3), # Assumed 30% market share for G2WHPs\n",
+    "    \"solar-heating\" => (solar_heating, 1.0),\n",
+    "    \"electric-heating\" => (electric_heating, 1.0),\n",
+    "    \"district-heating\" => (district_heating, 1.0)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sum the capacities together\n",
+    "\n",
+    "rename_cols = Dict(\n",
+    "    :Scenario => :scenario,\n",
+    "    :scenario_year => :scenario_year,\n",
+    "    :country => :country,\n",
+    "    :category => :building_category,\n",
+    "    :output_technology => :technology,\n",
+    "    :demand => :demand,\n",
+    "    :weighted_capacity_MW => :capacity,\n",
+    "    :capacity_unit => :unit,\n",
+    "    :demand_category => :demand_category,\n",
+    ")\n",
+    "heating_capacity_data = DataFrame()\n",
+    "for (name, (techs, weight)) in distributed_tech_mapping\n",
+    "    # Filter relevant technologies.\n",
+    "    df = filter(\n",
+    "        r -> r.Technology in techs && r.Fuel != \"ambient heat\", # Heat pumps have two fuel rows, omitting \"ambient heat\" since it's likely not what Alvaro wants.\n",
+    "        hm_capacity_data\n",
+    "    )\n",
+    "    if isempty(df) # Skip the rest of the loop if df is empty\n",
+    "        continue\n",
+    "    end\n",
+    "    # Calculate the weighted capacities\n",
+    "    df.output_technology .= name\n",
+    "    df.weighted_capacity_MW .= df.capacity_MW .* weight\n",
+    "    df.capacity_unit .= \"MW\"\n",
+    "    df.demand_category .= (name == \"district-heating\" ? \"district heating\" : \"distributed heating\")\n",
+    "    # Final formatting\n",
+    "    df = df[!, collect(keys(rename_cols))] # Drop unused columns\n",
+    "    rename!(df, rename_cols)\n",
+    "    country_cols = Symbol.(unique(df.country))\n",
+    "    df = stack( # Avoid nonresidential private vs nonresidential public duplicate row hassle by unstack-stack summing.\n",
+    "        unstack(\n",
+    "            df,\n",
+    "            :country,\n",
+    "            :capacity;\n",
+    "            combine=sum\n",
+    "        ),\n",
+    "        country_cols;\n",
+    "        variable_name=:country,\n",
+    "        value_name=:capacity\n",
+    "    )\n",
+    "    append!(heating_capacity_data, df)\n",
+    "end\n",
+    "describe(heating_capacity_data)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -322,6 +536,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "## Export country-wise peak-to-yearly-demand ratios\n",
+    "\n",
+    "# Config\n",
+    "dgts = 4 # Digits for rounding peak demands\n",
+    "\n",
+    "# Export\n",
+    "export_df = sort(dem_normalised_peak_demands)\n",
+    "export_df.value_norm_maximum = round.(\n",
+    "    export_df.value_norm_maximum .* 1000; digits=dgts\n",
+    ") # Round and convert to MW/GWh\n",
+    "export_df.unit .= \"MW/GWh\"\n",
+    "export_df = unstack(export_df, :country, :value_norm_maximum)\n",
+    "CSV.write(\n",
+    "    \"output/peak_to_yearly_demand_ratios_MW_GWh.csv\",\n",
+    "    export_df\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "## Export scenario demands\n",
     "\n",
     "# Config\n",
@@ -348,22 +586,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Export country-wise peak-to-yearly-demand ratios\n",
+    "## Export assumed existing capacity data\n",
     "\n",
     "# Config\n",
-    "dgts = 4 # Digits for rounding peak demands\n",
+    "dgts = 2 # Number of digits when rounding exports.\n",
+    "export_cols = [\n",
+    "    :scenario,\n",
+    "    :scenario_year,\n",
+    "    :country,\n",
+    "    :building_category,\n",
+    "    :demand_category,\n",
+    "    :demand,\n",
+    "    :technology,\n",
+    "    :unit,\n",
+    "    :capacity\n",
+    "]\n",
     "\n",
-    "# Export\n",
-    "export_df = sort(dem_normalised_peak_demands)\n",
-    "export_df.value_norm_maximum = round.(\n",
-    "    export_df.value_norm_maximum .* 1000; digits=dgts\n",
-    ") # Round and convert to MW/GWh\n",
-    "export_df.unit .= \"MW/GWh\"\n",
-    "export_df = unstack(export_df, :country, :value_norm_maximum)\n",
-    "CSV.write(\n",
-    "    \"output/peak_to_yearly_demand_ratios_MW_GWh.csv\",\n",
-    "    export_df\n",
-    ")\n"
+    "# Export table\n",
+    "capacity_export = heating_capacity_data[:, export_cols]\n",
+    "capacity_export.capacity = round.(capacity_export.capacity; digits=dgts)\n",
+    "capacity_export = sort!(unstack(\n",
+    "    capacity_export,\n",
+    "    :country,\n",
+    "    :capacity,\n",
+    "    combine=sum # Avoid nonresidential private vs nonresidential public duplicate row hassle.\n",
+    "))\n",
+    "CSV.write(\"output/scenario_estimated_existing_capacities_MW.csv\", capacity_export)"
    ]
   },
   {
@@ -504,7 +752,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.11.2",
+   "display_name": "Julia 1.11.5",
    "language": "julia",
    "name": "julia-1.11"
   },
@@ -512,7 +760,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.11.2"
+   "version": "1.11.5"
   }
  },
  "nbformat": 4,
