Include 2020 technology data to represent the "existing status"

--- a/process_generation_data.ipynb
+++ b/process_generation_data.ipynb
@@ -941,7 +941,7 @@
     "## Combine dh and heat data into a single dataset for processing, and join with cc params.\n",
     "\n",
     "# Config\n",
-    "final_years = string.([2030, 2040, 2050])\n",
+    "final_years = string.([2020, 2030, 2040, 2050])\n",
     "\n",
     "# Data processing\n",
     "full_data = filter(\n",
@@ -1171,7 +1171,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.11.1",
+   "display_name": "Julia 1.11.5",
    "language": "julia",
    "name": "julia-1.11"
   },
@@ -1179,7 +1179,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.11.1"
+   "version": "1.11.5"
   }
  },
  "nbformat": 4,
