--- a/process_storage_data.ipynb
+++ b/process_storage_data.ipynb
@@ -517,7 +517,7 @@
     "    :currency,\n",
     "    :metadata\n",
     "]\n",
-    "exportyears = string.([2030, 2040, 2050])\n",
+    "exportyears = string.([2020, 2030, 2040, 2050])\n",
     "roundcols = exportcols[3:9]\n",
     "dgts = 4 # Number of digits for rounding floats, storage losses need annoyingly many.\n",
     "\n",
@@ -537,7 +537,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.11.3",
+   "display_name": "Julia 1.11.5",
    "language": "julia",
    "name": "julia-1.11"
   },
@@ -545,7 +545,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.11.3"
+   "version": "1.11.5"
   }
  },
  "nbformat": 4,
