Serialize hotmaps data for later use

--- a/demand_scaling.ipynb
+++ b/demand_scaling.ipynb
@@ -261,12 +261,12 @@
     "    df[!, :scenario_value] .*= coeff\n",
     "    append!(hm_data, df)\n",
     "end\n",
-    "describe(hm_data)\n",
     "\n",
     "\n",
     "## Serialize extended hotmaps data for later use.\n",
     "\n",
-    "serialize(\"hm_data.ser\", hm_data)"
+    "serialize(\"hm_data.ser\", hm_data)\n",
+    "describe(hm_data)"
    ]
   },
   {
