Add coal and oil boiler parameters based on gas boiler data.
Also sort export

--- a/process_generation_data.ipynb
+++ b/process_generation_data.ipynb
@@ -413,6 +413,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Decentral coal boiler\n",
+    "\n",
+    "No `coal` boiler data it seems."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "coal_boiler = filter(x -> contains(lowercase(x), \"coal\"), heat_techs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Decentral A2W heat pump"
    ]
   },
@@ -858,7 +876,10 @@
     "## Technology mapping\n",
     "\n",
     "Mapping the suitable technologies to their desired Mopo WP5 counterparts,\n",
-    "as well as the applicable carbon capture technologies."
+    "as well as the applicable carbon capture technologies.\n",
+    "\n",
+    "Missing coal and oil boiler parameters have been mapped to either gas or oil,\n",
+    "whichever was available."
    ]
   },
   {
@@ -880,9 +901,9 @@
     "    \"bio-boiler-DH\" => (bio_boiler_dh, false),\n",
     "    \"bio-boiler-DH+CC\" => (bio_boiler_dh, true),\n",
     "    \"gas-boiler-DH\" => (gas_boiler_dh, false),\n",
-    "    \"oil-boiler-DH\" => (Set(), false), # No data in DEA catalogue.\n",
-    "    \"coal-boiler-DH\" => (Set(), false), # No data in DEA catalogue.\n",
-    "    \"elec-boiler\" => (elec_boiler_dh, false),\n",
+    "    \"oil-boiler-DH\" => (gas_boiler, false), # No data in DEA catalogue, map to gas heat-only boiler.\n",
+    "    \"coal-boiler-DH\" => (gas_boiler, false), # No data in DEA catalogue, map to gas heat-only boiler.\n",
+    "    \"elec-boiler-DH\" => (elec_boiler_dh, false),\n",
     "    \"heatpump-DH\" => (heatpump_dh, false),\n",
     "    \"solar-DH\" => (solar_dh, false),\n",
     "    \"geothermal-DH\" => (geothermal_dh, false),\n",
@@ -890,6 +911,7 @@
     "    \"gas-boiler\" => (gas_boiler, false),\n",
     "    \"bio-boiler\" => (bio_boiler, false),\n",
     "    \"oil-boiler\" => (oil_boiler, false),\n",
+    "    \"coal-boiler\" => (oil_boiler, false), # No data in DEA catalogue, map to oil boiler parameters.\n",
     "    \"air-heatpump\" => (air_heatpump, false),\n",
     "    \"ground-heatpump\" => (ground_heatpump, false),\n",
     "    \"solar-heating\" => (solar_heating, false),\n",
@@ -1156,17 +1178,10 @@
     "dgts = 2 # Number of digits for rounding floats\n",
     "\n",
     "# Export\n",
-    "export_df = deepcopy(final_data)\n",
+    "export_df = sort(deepcopy(final_data))\n",
     "export_df[!, roundcols] = round.(export_df[!, roundcols]; digits=dgts)\n",
     "CSV.write(\"output/heating_technology_params.csv\", export_df)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
