Fix a bug when filtering distributed technologies.
Also add test to check all mapped technologies appear in the final output.

--- a/process_capacity_data.ipynb
+++ b/process_capacity_data.ipynb
@@ -266,7 +266,7 @@
     "for (name, (techs, weight)) in distributed_tech_mapping\n",
     "    # Filter relevant technologies.\n",
     "    df = filter(\n",
-    "        r -> r.Technology in techs && r.Fuel != \"ambient heat\", # Heat pumps have two fuel rows, omitting \"ambient heat\" since it's likely not what Alvaro wants.\n",
+    "        r -> lowercase(r.Technology) in techs && lowercase(r.Fuel) != \"ambient heat\", # Heat pumps have two fuel rows, omitting \"ambient heat\" since it's likely not what Alvaro wants.\n",
     "        hm_capacity_data\n",
     "    )\n",
     "    if isempty(df) # Skip the rest of the loop if df is empty\n",
@@ -633,9 +633,28 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1340177",
+   "id": "8c0229e8",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Tests for the output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3c2ac8d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Test that all mapped technologies are represented\n",
+    "# (except district-heating since it gets purposefully replaced)\n",
+    "\n",
+    "final_techs = unique(capacity_export.technology)\n",
+    "distributed_techs = collect(keys(distributed_tech_mapping))\n",
+    "district_techs = collect(keys(district_tech_mapping))\n",
+    "mapped_techs = vcat(distributed_techs, district_techs)\n",
+    "only(setdiff(mapped_techs, final_techs))  == \"district-heating\""
+   ]
   }
  ],
  "metadata": {
