Check differences between scenarios

--- a/process_capacity_data.ipynb
+++ b/process_capacity_data.ipynb
@@ -655,6 +655,36 @@
     "mapped_techs = vcat(distributed_techs, district_techs)\n",
     "only(setdiff(mapped_techs, final_techs))  == \"district-heating\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6896361e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Is there any meaningful difference in the data across the scenarios for the historical data?\n",
+    "\n",
+    "country_cols = names(capacity_export)[8:end]\n",
+    "scenario_years = unique(capacity_export.scenario_year)\n",
+    "df = unstack(\n",
+    "    stack(capacity_export, country_cols; variable_name=:country, value_name=:capacity),\n",
+    "    :scenario,\n",
+    "    :capacity\n",
+    ")\n",
+    "df.sse .= (df.ambitious .- df.current).^2\n",
+    "diag = []\n",
+    "for year in scenario_years\n",
+    "    df_year = df[df.scenario_year .== year, :]\n",
+    "    share = count(df_year.sse .> 0) / length(df_year.sse)\n",
+    "    tot = sum(df_year.sse)\n",
+    "    append!(diag, year => (share, tot))\n",
+    "end\n",
+    "diag\n",
+    "\n",
+    "# 2012 data practically identical across the scenarios,\n",
+    "# but 2015 already almost as different as the rest of the scenario years?"
+   ]
   }
  ],
  "metadata": {
