Add simplified capacity export with decommissioning.

--- a/process_capacity_data.ipynb
+++ b/process_capacity_data.ipynb
@@ -567,7 +567,7 @@
    "id": "2ebb3270",
    "metadata": {},
    "source": [
-    "## Final formatting and exporting"
+    "## Combining data and final formatting"
    ]
   },
   {
@@ -594,6 +594,74 @@
     "cols = Symbol.(names(final_capacity_data))\n",
     "append!(final_capacity_data, district_heating_data[!, cols])\n",
     "describe(final_capacity_data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9dcf766d",
+   "metadata": {},
+   "source": [
+    "## Project existing capacities with decommissioning.\n",
+    "\n",
+    "For the European case study, we'll want to estimate the existing fleet at a select year and project it into the future with assumed decommissioning."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cc5dc79a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Project existing capacities with decommissioning.\n",
+    "\n",
+    "# Config\n",
+    "desired_years = [2025, 2030, 2035, 2040, 2045, 2050]\n",
+    "\n",
+    "# Read heating technology params to get estimated equipment decommissioning rates.\n",
+    "lifetimes = DataFrame(CSV.File(\"output/heating_technology_params.csv\"))\n",
+    "lifetimes.lifetime_y = 1 ./ lifetimes.lifetime_y\n",
+    "lifetimes = rename!(\n",
+    "    lifetimes[:, [:technology, :year, :lifetime_y]],\n",
+    "    :lifetime_y => :decommission_rate\n",
+    ")\n",
+    "\n",
+    "# Extrapolate select years\n",
+    "extrapolation_years = [2025, 2035, 2045]\n",
+    "lifetimes = unstack(lifetimes, :year, :decommission_rate)\n",
+    "for ey in extrapolation_years\n",
+    "    lifetimes[!, Symbol(ey)] = 0.5 .* (lifetimes[!, Symbol(ey-5)] +  lifetimes[!, Symbol(ey+5)])\n",
+    "end\n",
+    "lifetimes = sort(stack(\n",
+    "    lifetimes, names(lifetimes)[2:end]; variable_name=:scenario_year, value_name=:decommission_rate\n",
+    "))\n",
+    "lifetimes.scenario_year .= parse.(Int, lifetimes.scenario_year)\n",
+    "\n",
+    "# Combine decommissioning with capacity data and simulate remaining capacities\n",
+    "capacity_df = sort( # Drop missing `air-conditioning` lifetimes.\n",
+    "    dropmissing(leftjoin(final_capacity_data, lifetimes; on=[:technology, :scenario_year]))\n",
+    ")\n",
+    "capacity_df.decommission_factor .= (1 .- capacity_df.decommission_rate).^5\n",
+    "capacity_df.flat_decommission .= capacity_df.capacity .* (1 .- capacity_df.decommission_factor)\n",
+    "remaining_capacity = capacity_df[capacity_df.scenario_year .== first(desired_years), :]\n",
+    "flat_decommission = deepcopy(remaining_capacity.flat_decommission)\n",
+    "decommission_factor = deepcopy(remaining_capacity.decommission_factor)\n",
+    "for year in desired_years[1:end-1]\n",
+    "    df = remaining_capacity[remaining_capacity.scenario_year .== year, :]\n",
+    "    df.capacity .= max.(df.capacity .- flat_decommission, 0.0) # Flat decommissioning rates\n",
+    "    #df.capacity .*= decommission_factor # For relative decommissioning\n",
+    "    df.scenario_year .+= 5\n",
+    "    append!(remaining_capacity, df) \n",
+    "end\n",
+    "describe(remaining_capacity)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f4e97c84",
+   "metadata": {},
+   "source": [
+    "## Export outputs"
    ]
   },
   {
@@ -629,6 +697,44 @@
     "    combine=sum # Avoid nonresidential private vs nonresidential public duplicate row hassle.\n",
     "))\n",
     "CSV.write(\"output/scenario_estimated_existing_capacities_MW.csv\", capacity_export)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "024c8f9a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Export simplified existing capacity data\n",
+    "\n",
+    "# Config\n",
+    "select_scenario = \"current\"\n",
+    "dgts = 2 # Number of digits when rounding exports.\n",
+    "export_cols = [\n",
+    "    :country,\n",
+    "    :technology,\n",
+    "    :unit,\n",
+    "    Symbol(2025),\n",
+    "    Symbol(2030),\n",
+    "    Symbol(2040),\n",
+    "    Symbol(2050)\n",
+    "]\n",
+    "\n",
+    "# Formatting and aggregating\n",
+    "inds = (remaining_capacity.scenario .== select_scenario) .* (remaining_capacity.technology .!= \"air-conditioning\") # Omit \"air-conditioning\" since it has no lifetime params\n",
+    "simplified_export = remaining_capacity[inds, :]\n",
+    "cols = [:country, :technology, :unit, :scenario_year, :capacity]\n",
+    "simplified_export = unstack(\n",
+    "    simplified_export[:, cols],\n",
+    "    :scenario_year,\n",
+    "    :capacity;\n",
+    "    combine=(x -> round(sum(x); digits=dgts)) # Building categories and demands summed over\n",
+    ")\n",
+    "\n",
+    "# Export table\n",
+    "simplified_export = sort(simplified_export[:, export_cols])\n",
+    "CSV.write(\"output/simplified_capacities_with_decommissioning_MW.csv\", simplified_export)"
    ]
   },
   {
@@ -684,6 +790,29 @@
     "\n",
     "# 2012 data practically identical across the scenarios,\n",
     "# but 2015 already almost as different as the rest of the scenario years?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "91d8dd75",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Check that simplified export capacity decreases\n",
+    "\n",
+    "year_cols = Symbol.([2025, 2030, 2040, 2050])\n",
+    "year_durs = [5, 10, 10]\n",
+    "data = Matrix(simplified_export[:, year_cols])\n",
+    "decom_rates = diff(data; dims=2)\n",
+    "for row in eachrow(decom_rates)\n",
+    "    row ./= year_durs\n",
+    "end\n",
+    "rounded_decom_rates = round.(decom_rates, RoundUp; digits=1)\n",
+    "inds = [col .< decom_rates[:,1] for col in eachcol(rounded_decom_rates)]\n",
+    "count.(inds)\n",
+    "\n",
+    "# Mostly works, the rounding does throw things off a bit.\n"
    ]
   }
  ],
