Add `air-heatpump-cool` parameters and capacities.

--- a/process_capacity_data.ipynb
+++ b/process_capacity_data.ipynb
@@ -237,7 +237,7 @@
     "    \"solar-heating\" => (solar_heating, 1.0),\n",
     "    \"electric-heating\" => (electric_heating, 1.0),\n",
     "    \"district-heating\" => (district_heating, 1.0),\n",
-    "    \"air-conditioning\" => (air_conditioning, 1.0),\n",
+    "    \"air-heatpump-cool\" => (air_conditioning, 1.0),\n",
     ")"
    ]
   },
@@ -638,8 +638,8 @@
     "lifetimes.scenario_year .= parse.(Int, lifetimes.scenario_year)\n",
     "\n",
     "# Combine decommissioning with capacity data and simulate remaining capacities\n",
-    "capacity_df = sort( # Drop missing `air-conditioning` lifetimes.\n",
-    "    dropmissing(leftjoin(final_capacity_data, lifetimes; on=[:technology, :scenario_year]))\n",
+    "capacity_df = sort( # Inner join to avoid including scenario years with no lifetime params.\n",
+    "    innerjoin(final_capacity_data, lifetimes; on=[:technology, :scenario_year])\n",
     ")\n",
     "capacity_df.decommission_factor .= (1 .- capacity_df.decommission_rate).^5\n",
     "capacity_df.flat_decommission .= capacity_df.capacity .* (1 .- capacity_df.decommission_factor)\n",
@@ -813,6 +813,18 @@
     "count.(inds)\n",
     "\n",
     "# Mostly works, the rounding does throw things off a bit.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "af8401ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Check that `heat-pump-cool` gets mapped\n",
+    "\n",
+    "\"air-heatpump-cool\" in simplified_export.technology"
    ]
   }
  ],
