--- a/process_generation_data.ipynb
+++ b/process_generation_data.ipynb
@@ -447,6 +447,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Decentral A2A heat pump (used for cooling only)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "air_heatpump_cool = filter(x -> contains(lowercase(x), \"air-to-air\"), heat_techs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Decentral G2W heat pump"
    ]
   },
@@ -913,6 +929,7 @@
     "    \"oil-boiler\" => (oil_boiler, false),\n",
     "    \"coal-boiler\" => (oil_boiler, false), # No data in DEA catalogue, map to oil boiler parameters.\n",
     "    \"air-heatpump\" => (air_heatpump, false),\n",
+    "    \"air-heatpump-cool\" => (air_heatpump_cool, false),\n",
     "    \"ground-heatpump\" => (ground_heatpump, false),\n",
     "    \"solar-heating\" => (solar_heating, false),\n",
     "    \"electric-heating\" => (electric_heating, false),\n",
