Calculate yearly scenario demands for IC1 areas for WP2

--- a/demand_scaling.ipynb
+++ b/demand_scaling.ipynb
@@ -263,6 +263,24 @@
     "end\n",
     "\n",
     "\n",
+    "## Load and add IC1 res and nonres shares\n",
+    "\n",
+    "ic_path = \"input-data/ic1-res-nonres-shares.csv\"\n",
+    "ic_mapping = DataFrame(CSV.File(ic_path))\n",
+    "# Manipulate the IC1 table format to better align with Hotmaps data\n",
+    "df = stack(ic_mapping, [:res_share, :nonres_share]) # Stack category\n",
+    "df[!, :variable] = first.(split.(df.variable, '_')) # Split category\n",
+    "rename!(df, Dict(:variable => :category, :value => :share)) # Rename cols\n",
+    "df[!, :country] = first.(df.IC1, 2) # Extract Country information\n",
+    "# Join the dataframes to calculate IC1 area division.\n",
+    "df = innerjoin(hm_data, df; on=[:country, :category]) # Inner join to get scenario data.\n",
+    "df[!, :scenario_value] .*= df.share # Reduce scenario value by share.\n",
+    "rename!(df, Dict(:country => :old_country, :IC1 => :country)) # Swap country info.\n",
+    "df = df[!, names(hm_data)]\n",
+    "# Append IC1 data to hotmaps data.\n",
+    "hm_data = vcat(hm_data, df) # append! doesn't work due to typyng.\n",
+    "\n",
+    "\n",
     "## Serialize extended hotmaps data for later use.\n",
     "\n",
     "serialize(\"hm_data.ser\", hm_data)\n",
@@ -555,15 +573,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.11.5",
+   "display_name": "Julia 1.12.3",
    "language": "julia",
-   "name": "julia-1.11"
+   "name": "julia-1.12"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.11.5"
+   "version": "1.12.3"
   }
  },
  "nbformat": 4,
