Add WP5 desired formatting

--- a/process_generation_data.ipynb
+++ b/process_generation_data.ipynb
@@ -1180,6 +1180,8 @@
     "# Config\n",
     "exportcols = [\n",
     "    :technology,\n",
+    "    :from_node,\n",
+    "    :to_node,\n",
     "    :year,\n",
     "    :CAPEX_MEUR_MW,\n",
     "    :FOM_EUR_MW_y,\n",
@@ -1191,27 +1193,59 @@
     "    :currency,\n",
     "    :metadata\n",
     "]\n",
-    "roundcols = exportcols[3:9]\n",
+    "roundcols = exportcols[5:11]\n",
     "dgts = 2 # Number of digits for rounding floats\n",
+    "\n",
+    "# Functions to deduce `from_node` and `to_node` from `technology`\n",
+    "function from_node(x::String)\n",
+    "    if contains(x, \"pump\") || contains(x, \"elec\")\n",
+    "        return \"elec\"\n",
+    "    elseif contains(x, \"bio\")\n",
+    "        return \"bio\"\n",
+    "    elseif contains(x, \"coal\")\n",
+    "        return \"coal\"\n",
+    "    elseif contains(x, \"fuelcell\")\n",
+    "        return \"H2\"\n",
+    "    elseif contains(x, \"gas\")\n",
+    "        return \"CH4\"\n",
+    "    elseif contains(x, \"oil\")\n",
+    "        return \"HC\"\n",
+    "    elseif contains(x, \"waste\")\n",
+    "        return \"waste\"\n",
+    "    else\n",
+    "        return \"\"\n",
+    "    end\n",
+    "end\n",
+    "function to_node(x::String)\n",
+    "    if contains(x, \"DH\") || contains(x, \"CHP\")\n",
+    "        return \"DH\"\n",
+    "    elseif contains(x, \"cool\")\n",
+    "        return \"cool\"\n",
+    "    else\n",
+    "        return \"heat\"\n",
+    "    end\n",
+    "end\n",
     "\n",
     "# Export\n",
     "export_df = sort(deepcopy(final_data))\n",
+    "export_df.from_node = from_node.(export_df.technology)\n",
+    "export_df.to_node = to_node.(export_df.technology)\n",
     "export_df[!, roundcols] = round.(export_df[!, roundcols]; digits=dgts)\n",
-    "CSV.write(\"output/heating_technology_params.csv\", export_df)\n"
+    "CSV.write(\"output/heat_technology_params.csv\", export_df[!, exportcols])\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.11.5",
+   "display_name": "Julia 1.12.4",
    "language": "julia",
-   "name": "julia-1.11"
+   "name": "julia-1.12"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.11.5"
+   "version": "1.12.4"
   }
  },
  "nbformat": 4,
