--- a/process_storage_data.ipynb
+++ b/process_storage_data.ipynb
@@ -503,6 +503,7 @@
     "# Config\n",
     "exportcols = [\n",
     "    :technology,\n",
+    "    :to_node, # Add for WP5 modelling convenience.\n",
     "    :year,\n",
     "    :CAPEX_energy_MEUR_GWh,\n",
     "    #:CAPEX_power_MEUR_MW,\n",
@@ -518,34 +519,33 @@
     "    :metadata\n",
     "]\n",
     "exportyears = string.([2020, 2030, 2040, 2050])\n",
-    "roundcols = exportcols[3:9]\n",
+    "roundcols = exportcols[4:10]\n",
     "dgts = 4 # Number of digits for rounding floats, storage losses need annoyingly many.\n",
+    "\n",
+    "# Function for deducing `to_node` based on the technology name.\n",
+    "function to_node(x::String)\n",
+    "    return contains(x, \"DH\") ? \"DH\" : \"heat\"\n",
+    "end\n",
     "\n",
     "# Export\n",
     "export_df = filter(r -> r.year in exportyears, final_data)\n",
+    "export_df.to_node = to_node.(export_df.technology) # Deduce new col based on tech\n",
     "export_df[!, roundcols] = round.(export_df[!, roundcols]; digits=dgts)\n",
-    "CSV.write(\"output/heat_storage_technology_params.csv\", export_df[!, exportcols])\n"
+    "CSV.write(\"output/heat_storage_params.csv\", export_df[!, exportcols])\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.11.5",
+   "display_name": "Julia 1.12.4",
    "language": "julia",
-   "name": "julia-1.11"
+   "name": "julia-1.12"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.11.5"
+   "version": "1.12.4"
   }
  },
  "nbformat": 4,
