Remove trailing newlines

--- a/process_generation_data.ipynb
+++ b/process_generation_data.ipynb
@@ -1231,7 +1231,7 @@
     "export_df.from_node = from_node.(export_df.technology)\n",
     "export_df.to_node = to_node.(export_df.technology)\n",
     "export_df[!, roundcols] = round.(export_df[!, roundcols]; digits=dgts)\n",
-    "CSV.write(\"output/heat_technology_params.csv\", export_df[!, exportcols])\n"
+    "CSV.write(\"output/heat_technology_params.csv\", export_df[!, exportcols])"
    ]
   }
  ],
