--- a/process_storage_data.ipynb
+++ b/process_storage_data.ipynb
@@ -531,7 +531,7 @@
     "export_df = filter(r -> r.year in exportyears, final_data)\n",
     "export_df.to_node = to_node.(export_df.technology) # Deduce new col based on tech\n",
     "export_df[!, roundcols] = round.(export_df[!, roundcols]; digits=dgts)\n",
-    "CSV.write(\"output/heat_storage_params.csv\", export_df[!, exportcols])\n"
+    "CSV.write(\"output/heat_storage_params.csv\", export_df[!, exportcols])"
    ]
   }
  ],
